--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -4,5 +4,13 @@ services:
     default: true
     depends: mysql
     
+    commands:
+      init:
+        - apt-get update
+        - apt-get install -y mysql-client
+        
+        - composer --no-ansi global require drush/drush:8.1.17
+        - ln -sf ~/.composer/vendor/bin/drush /usr/local/bin/drush
+    
   mysql:
     image: tugboatqa/mysql:5
