--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -13,7 +13,7 @@ services:
         - cd ~/.drush/commands
         - wget https://github.com/backdrop-contrib/drush/archive/1.x-0.x.zip
         - unzip 1.x-0.x.zip -d backdrop
-        - drush cc -y
+        - drush cache-clear drush
         
         - drush dlb backdrop
         - ln -snf "${TUGBOAT_ROOT}/backdrop" "${DOCROOT}"
