--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -21,6 +21,10 @@ services:
         - mkdir -p "${DOCROOT}/sites/default/files"
         - chown www-data "${DOCROOT}/sites/default/files"
         - chmod 770 "${DOCROOT}/sites/default/files"
+              
+       build:
+        - drush -r "${DOCROOT}" cache-clear all
+        - drush -r "${DOCROOT}" updb -y
     
   mysql:
     image: tugboatqa/mysql:5
