--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -6,6 +6,8 @@ services:
     
     commands:
       init:    
+        - a2enmod headers rewrite
+        
         - composer --no-ansi global require drush/drush:8.x
         - ln -sf ~/.composer/vendor/bin/drush /usr/local/bin/drush
         
