--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -19,7 +19,7 @@ services:
         - ln -snf "${TUGBOAT_ROOT}/backdrop" "${DOCROOT}"
         
         - drush -r "${DOCROOT}" site-install --db-url="mysql://tugboat:tugboat@mysql/tugboat" -y
-        - drush user-password admin --password="${ADMIN_PWD}"
+        - drush -r "${DOCROOT}" user-password admin --password="${ADMIN_PWD}"
         
         - mkdir -p "${DOCROOT}/files"
         - chown www-data "${DOCROOT}/files"
