--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -1,33 +1,64 @@
 services:
+
+  # What to call the service hosting the site.
   php:
+  
+    # Use the latest PHP 7.x with Apache
     image: tugboatqa/php:7-apache
+    
+    # Set this as the default service. This does a few things
+    #   1. Clones the git repository into the service container
+    #   2. Exposes port 80 to the Tugboat HTTP proxy
+    #   3. Routes requests to the preview URL to this service
     default: true
+    
+    # Wait until the mysql service is done building
     depends: mysql
     
+    # A set of commands to run while building this service
     commands:
-      init:    
+    
+      # The `init` commands sets up the basic preview infrastructure
+      init:
         - a2enmod headers rewrite
         
+        # Install Drush 8.x
         - composer --no-ansi global require drush/drush:8.x
         - ln -sf ~/.composer/vendor/bin/drush /usr/local/bin/drush
         
+        # Install Backdrop-specific Drush commands
         - mkdir -p ~/.drush/commands/ 
         - cd ~/.drush/commands/ && wget https://github.com/backdrop-contrib/drush/archive/1.x-0.x.zip
         - cd ~/.drush/commands/ && unzip 1.x-0.x.zip -d backdrop
         
+        # Download Backdrop and link the docroot. 
         - drush download-backdrop backdrop
         - ln -snf "${TUGBOAT_ROOT}/backdrop" "${DOCROOT}"
         
+        # Install Backdrop and the database. Change the admin password. 
+        # The variable ${ADMIN_PWD} is an environment variables coming 
+        # from Tugboat on the Repository Settings page. You must set 
+        # this up ahead of time. See the screenshot in this repos to know 
+        # what it looks like. 
         - drush -r "${DOCROOT}" site-install --db-url="mysql://tugboat:tugboat@mysql/tugboat" -y
         - drush -r "${DOCROOT}" user-password admin --password="${ADMIN_PWD}"
         
+        # Setup the necessary file permissions. 
         - mkdir -p "${DOCROOT}/files"
         - chown www-data "${DOCROOT}/files"
         - chmod 744 "${DOCROOT}/files"
-              
+      
+      # Commands that build the site. When a preview is built from a
+      # base preview, the build workflow starts here, skipping the init
+      # and update steps, because the results of those are inherited
+      # from the base preview.
       build:
         - drush -r "${DOCROOT}" cache-clear all
         - drush -r "${DOCROOT}" updatedb -y
-    
+  
+  # What to call the service hosting MySQL. This name also acts as the
+  # hostname to access the service by from the php service.
   mysql:
+  
+    # Use the latest available 5.x version of MySQL
     image: tugboatqa/mysql:5
