--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Ignore configuration files that may contain sensitive information.
+settings.php
 sites/*/*settings*.php
 sites/example.sites.php
 
