--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -52,17 +52,12 @@ services:
       # base preview, the build workflow starts here, skipping the init
       # and update steps, because the results of those are inherited
       # from the base preview.
-      build: | 
+      build:  
         - drush -r "${DOCROOT}" cache-clear all
         - drush -r "${DOCROOT}" updatedb -y
         
         # Warm the cache
-        - wget -e robots=off \
-            --quiet \
-            --page-requisites \
-            --delete-after \
-            --header "Host: tugboat.qa" \
-            http://127.0.0.1 || /bin/true
+        - wget -e robots=off --quiet --page-requisites --delete-after --header "Host: tugboat.qa" http://127.0.0.1 || /bin/true
   
   # What to call the service hosting MySQL. This name also acts as the
   # hostname to access the service by from the php service.
