--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -58,7 +58,9 @@ services:
         - drush -r "${DOCROOT}" cache-clear all
         - drush -r "${DOCROOT}" updatedb -y
         # Tenon Integration
-        - curl -d "url=${TUGBOAT_PREVIEW_URL}&key=${TENON_API}" -H Content-Type:application/x-www-form-urlencoded -H Cache-Control:no-cache -X POST https://tenon.io/api/  | jq '{.resultSet[] .errorTitle}'
+        - touch results.json
+        - curl -d "url=${TUGBOAT_PREVIEW_URL}&key=${TENON_API}" -H Content-Type:application/x-www-form-urlencoded -H Cache-Control:no-cache -X POST https://tenon.io/api/ > results.json
+        - jq '{.resultSet[] .errorTitle}' ./results.json
   
   # What to call the service hosting MySQL. This name also acts as the
   # hostname to access the service by from the php service.
