--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -60,7 +60,7 @@ services:
         # Tenon Integration
         - touch results.json
         - curl -d "url=${TUGBOAT_PREVIEW_URL}&key=${TENON_API}" -H Content-Type:application/x-www-form-urlencoded -H Cache-Control:no-cache -X POST https://tenon.io/api/ > results.json
-        - jq '{Summary: [.resultSummary .tests], title: .resultSet[] .errorTitle, description: .resultSet[] .errorDescription, snippet: .resultSet[] .errorSnippet, ref: .resultSet[] .ref, resultTitle: .resultSet[] .resultTitle, xpath: .resultSet[] .xpath}' results.json
+        - "jq '{Summary: [.resultSummary .tests], title: .resultSet[] .errorTitle, description: .resultSet[] .errorDescription, snippet: .resultSet[] .errorSnippet, ref: .resultSet[] .ref, resultTitle: .resultSet[] .resultTitle, xpath: .resultSet[] .xpath}' results.json"
   
   # What to call the service hosting MySQL. This name also acts as the
   # hostname to access the service by from the php service.
