--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -58,7 +58,9 @@ services:
       # Also called when a preview is refreshed: update, then build. 
       # update is not called when a preview is created from a base preview: build
       update:
-        - lighthouse http://localhost --chrome-flags="--no-sandbox --headless --disable-gpu" --output json --output-path "${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y/%m/%d-%H:%M:%S").json"
+        - &path "${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y/%m/%d-%H:%M:%S").json"
+        - touch *path
+        - lighthouse http://localhost --chrome-flags="--no-sandbox --headless --disable-gpu" --output json --output-path "*path"
       
       # Commands that build the site. When a preview is built from a
       # base preview, the build workflow starts here, skipping the init
