--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -26,7 +26,7 @@ services:
         - apt-get update
         - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
         - sudo apt-get install -y nodejs chromium
-        - npm install -g lighthouse
+        - npm install -g lighthouse gists
         
         # Install Drush 8.x
         - composer --no-ansi global require drush/drush:8.x
