--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -1,4 +1,3 @@
-filename: &fn "${TUGBOAT_PREVIEW_ID}-$(date \"+%Y%m%d-%H%M%S\").json"
 services:
 
   # What to call the service hosting the site.
@@ -58,6 +57,7 @@ services:
       # Called when a new preview is created from scratch: init, update, build. 
       # Also called when a preview is refreshed: update, then build. 
       # update is not called when a preview is created from a base preview: build
+      filename: &fn "${TUGBOAT_PREVIEW_ID}-$(date \"+%Y%m%d-%H:%M:%S\").json"
       update:
         - touch "${TUGBOAT_ROOT}/*fn"
         - lighthouse http://localhost --chrome-flags="--no-sandbox --headless --disable-gpu" --output json --output-path "${TUGBOAT_ROOT}/*fn"
