--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -1,3 +1,5 @@
+filename: &fn "${TUGBOAT_PREVIEW_ID}-$(date \"+%Y%m%d-%H%M%S\").json"
+
 services:
 
   # What to call the service hosting the site.
@@ -57,11 +59,10 @@ services:
       # Called when a new preview is created from scratch: init, update, build. 
       # Also called when a preview is refreshed: update, then build. 
       # update is not called when a preview is created from a base preview: build
-      filename: &fn "${TUGBOAT_PREVIEW_ID}-$(date \"+%Y%m%d-%H:%M:%S\").json"
       update:
         - touch "${TUGBOAT_ROOT}/*fn"
         - lighthouse http://localhost --chrome-flags="--no-sandbox --headless --disable-gpu" --output json --output-path "${TUGBOAT_ROOT}/*fn"
-        - curl -u ${$TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} -H "Content-Type: application/json" -X POST -d '{"description": "${TUGBOAT_PREVIEW_URL}","public": false,"files": {"*fn": {"content": "Paste your XML code.."}}}' 'https://api.github.com/gists'
+        # curl -u ${$TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} -H "Content-Type: application/json" -X POST -d '{"description": "${TUGBOAT_PREVIEW_URL}","public": false,"files": {"*fn": {"content": "Paste your XML code.."}}}' 'https://api.github.com/gists'
       
       # Commands that build the site. When a preview is built from a
       # base preview, the build workflow starts here, skipping the init
