--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -2,7 +2,7 @@ services:
 
   # What to call the service hosting the site.
   php:
-    filename: &fn "${TUGBOAT_PREVIEW_ID}-$(date \"+%Y%m%d-%H%M%S\").json"
+    filename: &fn cat.json
     # Use the latest PHP 7.x with Apache
     image: tugboatqa/php:7-apache
     
