--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -58,7 +58,7 @@ services:
       # Also called when a preview is refreshed: update, then build. 
       # update is not called when a preview is created from a base preview: build
       update:
-        - touch "${TUGBOAT_ROOT}/*fn"
+        - touch ${TUGBOAT_ROOT}/*fn
         - lighthouse http://localhost --chrome-flags="--no-sandbox --headless --disable-gpu" --output json --output-path "${TUGBOAT_ROOT}/*fn"
         # curl -u ${$TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} -H "Content-Type: application/json" -X POST -d '{"description": "${TUGBOAT_PREVIEW_URL}","public": false,"files": {"*fn": {"content": "Paste your XML code.."}}}' 'https://api.github.com/gists'
       
