--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -57,8 +57,8 @@ services:
       # Also called when a preview is refreshed: update, then build. 
       # update is not called when a preview is created from a base preview: build
       update:
-        - touch "${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").json"
-        - lighthouse http://localhost --chrome-flags="--no-sandbox --headless --disable-gpu" --output json --output-path "${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").json"
+        - touch "${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date \"+%Y%m%d\").json"
+        - lighthouse http://localhost --chrome-flags="--no-sandbox --headless --disable-gpu" --output json --output-path "${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date \"+%Y%m%d\").json"
         # curl -u ${$TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} -H "Content-Type: application/json" -X POST -d '{"description": "Tugboat: ${TUGBOAT_REPO}\n${TUGBOAT_PREVIEW_URL}","public": false,"files": {"${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").json": {"content": "Paste your XML code.."}}}' 'https://api.github.com/gists'
       
       # Commands that build the site. When a preview is built from a
