--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -24,7 +24,7 @@ services:
         # Install Node and Google Lighthouse
         - apt-get update
         - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
-        - sudo apt-get install -y nodejs chromium
+        - sudo apt-get install -y nodejs chromium jq
         - npm install -g lighthouse
         
         # Install Drush 8.x
