--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -56,9 +56,10 @@ services:
       # Called when a new preview is created from scratch: init, update, build. 
       # Also called when a preview is refreshed: update, then build. 
       # update is not called when a preview is created from a base preview: build
-      update:
+      update: | 
         - touch "${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").json"
-        - lighthouse ${TUGBOAT_PREVIEW_URL} --chrome-flags="--no-sandbox --headless" --output json --output-path "${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").json"
+        - lighthouse ${TUGBOAT_PREVIEW_URL} --chrome-flags="--no-sandbox --headless" \
+            --output json --output-path "${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").json"
         # I don't have the YAML friendly syntax figured out for these commands yet. 
         # - cat ${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").json | jq -r "{ description: \"Tugboat:${TUGBOAT_REPO} - ${TUGBOAT_PREVIEW_URL}\", public: \"false\", files: {\"${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").lighthouse.report.json\": {content: (. | tostring) }}}" > ${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").gist
         # - cat ${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").gist | curl -sS -X POST -H 'Content-Type: application/json' -u ${TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} --data @- https://api.github.com/gists > results.json
