--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -63,7 +63,10 @@ services:
         cat ${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").json \
           | jq -r "{ description: \"Tugboat:${TUGBOAT_REPO} - ${TUGBOAT_PREVIEW_URL}\", public: \"false\", files: {\"${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").lighthouse.report.json\": {content: (. | tostring) }}}" \
           > ${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").gist
-        # - cat ${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").gist | curl -sS -X POST -H 'Content-Type: application/json' -u ${TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} --data @- https://api.github.com/gists > results.json
+        cat ${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").gist \
+          | curl -sS -X POST -H 'Content-Type: application/json' \
+          -u ${TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} \
+          --data @- https://api.github.com/gists > results.json
       
       # Commands that build the site. When a preview is built from a
       # base preview, the build workflow starts here, skipping the init
