--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -57,17 +57,13 @@ services:
       # Also called when a preview is refreshed: update, then build. 
       # update is not called when a preview is created from a base preview: build
       update: | 
-        touch "${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").json"
         lighthouse ${TUGBOAT_PREVIEW_URL} --chrome-flags="--no-sandbox --headless" \
-            --output json --output-path "${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").json"
-        cat ${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").json \
+          --output json \ 
           | jq -r "{ description: \"Tugboat:${TUGBOAT_REPO} - ${TUGBOAT_PREVIEW_URL}\", public: \"false\", files: {\"${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").lighthouse.report.json\": {content: (. | tostring) }}}" \
-          > ${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").gist
-        cat ${TUGBOAT_ROOT}/${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").gist \
           | curl -sS -X POST -H 'Content-Type: application/json' \
-          -u ${TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} \
-          --data @- https://api.github.com/gists > results.json
-      
+            -u ${TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} \
+            --d @- https://api.github.com/gists > results.json
+
       # Commands that build the site. When a preview is built from a
       # base preview, the build workflow starts here, skipping the init
       # and update steps, because the results of those are inherited
