--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -56,8 +56,8 @@ services:
       # Called when a new preview is created from scratch: init, update, build. 
       # Also called when a preview is refreshed: update, then build. 
       # update is not called when a preview is created from a base preview: build
-      update:
-        # lighthouse ${TUGBOAT_PREVIEW_URL} --chrome-flags="--no-sandbox --headless" --output json \  
+      update: | 
+        lighthouse ${TUGBOAT_PREVIEW_URL} --chrome-flags="--no-sandbox --headless" --output json
         # | jq -r "{ description: \"Tugboat:${TUGBOAT_REPO} - ${TUGBOAT_PREVIEW_URL}\", public: \"false\", files: {\"${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").lighthouse.report.json\": {content: (. | tostring) }}}" \
 
       # Commands that build the site. When a preview is built from a
