--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -59,6 +59,7 @@ services:
       update: | 
         lighthouse ${TUGBOAT_PREVIEW_URL} --chrome-flags="--no-sandbox --headless" \
           \--output json
+          | jq -r "{ description: \"Tugboat:${TUGBOAT_REPO} - ${TUGBOAT_PREVIEW_URL}\", public: \"false\", files: {\"${TUGBOAT_PREVIEW_ID}-$(date "+%Y%m%d").lighthouse.report.json\": {content: (. | tostring) }}}"
 
 
       # Commands that build the site. When a preview is built from a
