--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -66,11 +66,12 @@ services:
       # from the base preview.
       build: | 
         if [[ -v TUGBOAT_GITHUB_HEAD ]]; then \
-        \ curl -sS -X GET -H 'Content-Type: application/json' \
+        curl -sS -X GET -H 'Content-Type: application/json' \
             \-u ${TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} \
             "https://api.github.com/repos/${TUGBOAT_GITHUB_OWNER}/${TUGBOAT_GITHUB_REPO}/statuses/${TUGBOAT_GITHUB_HEAD}" > status.json
           STATUS_URL=$(cat status.json | jq -r '.[0] | .url') \
         \;fi
+        
         # Run lighthouse as JSON, pipe it to jq to wrangle and send it to GitHub Gist via curl 
         # so Lighthouse Viewer can grab it. 
         lighthouse http://localhost --chrome-flags="--no-sandbox --headless" \
