--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -69,7 +69,13 @@ services:
         curl -sS -X GET -H 'Content-Type: application/json' \
             \-u ${TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} \
             "https://api.github.com/repos/${TUGBOAT_GITHUB_OWNER}/${TUGBOAT_GITHUB_REPO}/statuses/${TUGBOAT_GITHUB_HEAD}" > status.json
-          STATUS_URL=$(cat status.json | jq -r '.[0] | .url');
+          
+        STATUS_URL=$(cat status.json | jq -r '.[0] | .url');
+          
+        # Pending
+        curl -sS -X POST -H 'Content-Type: application/json' \
+          \-u ${TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} \
+          \-d "{ \"state\": \"pending\", \"target_url\": \"${TUGBOAT_PREVIEW_URL}\", \"description\": \"Building lighthouse report.\", \"context\": \"Tugboat.qa\" }" ${STATUS_URL}
         fi
         
         # Run lighthouse as JSON, pipe it to jq to wrangle and send it to GitHub Gist via curl 
