--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -100,6 +100,12 @@ services:
           \-d "{ \"description\": \"Tugboat: ${TUGBOAT_REPO} - Preview: ${TUGBOAT_PREVIEW_URL} - Lighthouse: https://googlechrome.github.io/lighthouse/viewer/?gist=${GID}\" }" "https://api.github.com/gists/${GID}" > updated.gist
         
         if [[ -v TUGBOAT_GITHUB_HEAD ]]; then  
+        # Leave a comment posting Lighthouse scores for quick reference
+        PR=$(echo ${TUGBOAT_PREVIEW} | sed 's/pr//')
+        curl -sS -X POST -H 'Content-Type: application/json' \
+          \-u ${TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} \
+          \-d "{ \"body\": \"Lighthouse Report:\n $($(cat score.json | jq -r '. | "- \(.category): \(.score)"')\" }" "https://api.github.com/repos/${TUGBOAT_GITHUB_OWNER}/${TUGBOAT_GITHUB_REPO}/issues/${PR}/comments"          
+          
         # Set the Pull Request status to 'Success'
         curl -sS -X POST -H 'Content-Type: application/json' \
           \-u ${TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} \
