--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -104,7 +104,7 @@ services:
         PR=$(echo ${TUGBOAT_PREVIEW} | sed 's/pr//')
         curl -sS -X POST -H 'Content-Type: application/json' \
           \-u ${TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} \
-          \-d "{ \"body\": \"Lighthouse Report: $(cat score.json | jq -r '. | "- \(.category): \(.score)" | tostring')\") }" "https://api.github.com/repos/${TUGBOAT_GITHUB_OWNER}/${TUGBOAT_GITHUB_REPO}/issues/${PR}/comments" > comment.json
+          \-d "{ \"body\": \"Lighthouse Report: $(cat score.json | jq -r '. | "- \(.category): \(.score)"'\") }" "https://api.github.com/repos/${TUGBOAT_GITHUB_OWNER}/${TUGBOAT_GITHUB_REPO}/issues/${PR}/comments" > comment.json
           
         # Set the Pull Request status to 'Success'
         curl -sS -X POST -H 'Content-Type: application/json' \
