--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -5,9 +5,9 @@ services:
     # Use the latest PHP 7.x with Apache
     image: tugboatqa/php:7-apache
     
-    # Set this as the default service. This does a few things
-    #   1. Clones the git repository into the service container
-    #   2. Exposes port 80 to the Tugboat HTTP proxy
+    # Set this as the default service. This does a few things:
+    #   1. Clones the git repository into the service container //checkout: true
+    #   2. Exposes port 80 to the Tugboat HTTP proxy //expose: 80
     #   3. Routes requests to the preview URL to this service
     default: true
     
@@ -17,11 +17,16 @@ services:
     # A set of commands to run while building this service
     commands:
     
-      # The `init` commands sets up the basic preview infrastructure
+      # The `init` command is called from two different actions:
+      #   1. When a preview is first created: `init`, then `update`, then `build`
+      #   2. When a preview is rebuilt: `init`, then `update`, then `build`
+      # The `init` command is not called when a preview is cloned or 
+      # refreshed.   
       init:
+        # Enable mode_rewrite
         - a2enmod headers rewrite
         
-        # Install Node and Google Lighthouse
+        # Install Node, Google Lighthouse, and jq
         - apt-get update
         - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
         - sudo apt-get install -y nodejs chromium jq
@@ -40,36 +45,47 @@ services:
         - drush download-backdrop backdrop
         - ln -snf "${TUGBOAT_ROOT}/backdrop" "${DOCROOT}"
         
-        # Install Backdrop and the database. Change the admin password. 
-        # The variable ${ADMIN_PWD} is an environment variables coming 
-        # from Tugboat on the Repository Settings page. You must set 
-        # this up ahead of time. See the screenshot in this repos to know 
-        # what it looks like. 
+        # Install Backdrop and the database. A default admin password is 
+        # is printed to the stdout, so we'll set a private admin password.
+        # The variable ${ADMIN_PWD} was created from the Tugboat UI, on the 
+        # Repository Settings page. You must set this up ahead of time. See 
+        # the screenshot in this repos for details. 
         - drush -r "${DOCROOT}" site-install --db-url="mysql://tugboat:tugboat@mysql/tugboat" -y
         - drush -r "${DOCROOT}" user-password admin --password="${ADMIN_PWD}"
         
-        # Setup the necessary file permissions. 
+        # Setup necessary file permissions. 
         - mkdir -p "${DOCROOT}/files"
         - chown www-data "${DOCROOT}/files"
         - chmod 744 "${DOCROOT}/files"
      
-      # Called when a new preview is created from scratch: init, update, build. 
-      # Also called when a preview is refreshed: update, then build. 
-      # update is not called when a preview is created from a base preview: build
+      # The `update` command is called from two different actions:
+      #   1. When a preview is first created: `init`, then `update`, then `build`
+      #   2. When a preview is refreshed: `update`, then `build`
+      # `update` is not called when a preview is created from a base preview:
+      #   only the `build` command is called (see below)
       update:
         - drush -r "${DOCROOT}" cache-clear all
         - drush -r "${DOCROOT}" updatedb -y
 
-      # Commands that build the site. When a preview is built from a
-      # base preview, the build workflow starts here, skipping the init
-      # and update steps, because the results of those are inherited
-      # from the base preview.
-      build: | 
+      # The `build` command is called from three different actions:
+      #   1. When a preview is first created: `init`, then `update`, then `build`
+      #   2. When a preview is created from a base preview: `build`
+      #   3. When a preview is refreshed: `update`, then `build`
+      # Base Previews provide Tugboat with a starting point, from where it can 
+      # build new previews. When a preview is marked as a base preview, 
+      # Tugboat preserves the build just after the `init` and `update` steps
+      # have run. In this instance, Tugboat will only run the `build` commands 
+      # within your services in real time. Base Previews drastically reduce 
+      # preview build times and the amount of space a preview occupies on disk.
+      build: |
+    
+        # Test for a pull request. 
         if [[ -v TUGBOAT_GITHUB_HEAD ]]; then 
-        curl -sS -X GET -H 'Content-Type: application/json' \
+          # Grab the status url from GitHub
+          curl -sS -X GET -H 'Content-Type: application/json' \
             \-u ${TUGBOAT_GITHUB_OWNER}:${GITHUB_TOKEN} \
             "https://api.github.com/repos/${TUGBOAT_GITHUB_OWNER}/${TUGBOAT_GITHUB_REPO}/statuses/${TUGBOAT_GITHUB_HEAD}" > status.json
-          
+                      
         STATUS_URL=$(cat status.json | jq -r '.[0] | .url');
           
         # Set the Pull Request status to 'Pending'
