--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -21,6 +21,7 @@ services:
       # The `init` commands sets up the basic preview infrastructure
       init:
         - a2enmod headers rewrite
+        - docker-php-ext-install opcache
         
         # Install Drush 8.x
         - composer --no-ansi global require drush/drush:8.x
