--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -45,9 +45,8 @@ services:
         - drush -r "${DOCROOT}" user-password admin --password="${ADMIN_PWD}"
         
         # Setup the necessary file permissions. 
-        - mkdir -p "${DOCROOT}/files"
-        - chown www-data "${DOCROOT}/files"
-        - chmod 744 "${DOCROOT}/files"
+        - chown -R www-data "${DOCROOT}/files"
+        - chmod -R 744 "${DOCROOT}/files"
       
       # Commands that build the site. When a preview is built from a
       # base preview, the build workflow starts here, skipping the init
